# dicegame

./: .gitignore  README.md  pyproject.toml
agent/: dice_game_agent.py
analysis/: hyper_parameters_search.py  hyperparameters_search.py
