[tool.poetry]
name = "dicegame"
version = "0.1.0"
description = "AI written in Python that can play a simple dice game"
authors = ["Leone Perdigão <leone.lage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "<1.24.0"
scipy = "^1.10.0"
prettytable = "^3.6.0"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
